bootstrap/tests/snapshots/codegen_tests__v15_use_rust_version_features_cargo.snap
---
source: bootstrap/tests/codegen_tests.rs
expression: cargo_toml
---
[workspace]

[package]
name = "liva_project"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
